--- a/spring-security-demo/src/main/resources/application.properties
+++ b/spring-security-demo/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url= jdbc:mysql://127.0.0.1:3306/imooc-demo?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+spring.datasource.url= jdbc:mysql://127.0.0.1:3306/security-demo?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = 123456
 
 spring.session.store-type = none
 
 server.session.timeout = 600
-
+#spring security 开关
 #security.basic.enabled = false
 
 
@@ -15,7 +15,7 @@ security.user.password=root
 
 server.port = 8060
 
-#imooc.security.browser.loginPage = /demo-signIn.html
+imooc.security.browser.loginPage = /demo-signIn.html
 #imooc.security.browser.loginType = REDIRECT
 
 #imooc.security.code.image.length = 6
