--- a/spring-security/pom.xml
+++ b/spring-security/pom.xml
@@ -10,25 +10,43 @@
   </properties>
   
   <!-- 作用：替你去管理spring版本 -->
-	<dependencyManagement>
-	    <dependencies>
-	        <dependency>
-	            <groupId>io.spring.platform</groupId>
-	            <artifactId>platform-bom</artifactId>
-	            <version>Cairo-SR2</version>
-	            <type>pom</type>
-	            <scope>import</scope>
-	        </dependency>
+<!-- 	<dependencyManagement> -->
+<!-- 	    <dependencies> -->
+<!-- 	        <dependency> -->
+<!-- 	            <groupId>io.spring.platform</groupId> -->
+<!-- 	            <artifactId>platform-bom</artifactId> -->
+<!-- 	            <version>Cairo-SR2</version> -->
+<!-- 	            <type>pom</type> -->
+<!-- 	            <scope>import</scope> -->
+<!-- 	        </dependency> -->
 	        
-	        <dependency>
-	            <groupId>org.springframework.cloud</groupId>
-	            <artifactId>spring-cloud-dependencies</artifactId>
-	            <version>Finchley.RELEASE</version>
-	            <type>pom</type>
-	            <scope>import</scope>
-        	</dependency>
-	    </dependencies>
-	</dependencyManagement>
+<!-- 	        <dependency> -->
+<!-- 	            <groupId>org.springframework.cloud</groupId> -->
+<!-- 	            <artifactId>spring-cloud-dependencies</artifactId> -->
+<!-- 	            <version>Finchley.RELEASE</version> -->
+<!-- 	            <type>pom</type> -->
+<!-- 	            <scope>import</scope> -->
+<!--         	</dependency> -->
+<!-- 	    </dependencies> -->
+<!-- 	</dependencyManagement> -->
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>io.spring.platform</groupId>
+				<artifactId>platform-bom</artifactId>
+				<version>Brussels-SR4</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Dalston.SR2</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement> 
 	<!-- 指定maven 版本和jdk版本和编码-->
 	<build>
 		<plugins>
