解决空指针异异常

--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Program Files\\Java\\jdk1.8.0_131","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"D:\\code\\security\\spring-security-core","type":"PROJECT","hints":{"PROJECT_NAME":"spring-security-core"}},"com.demo.security:spring-security-core:0.0.1"],[{"location":"D:\\maven\\mvnRespo\\org\\springframework\\security\\spring-security-config\\4.2.3.RELEASE\\spring-security-config-4.2.3.RELEASE.jar","type":"JAR","hints":{}},"ABSENT"]]
